# strogino

./: .clang-format  .gitignore  Cargo.toml  rustfmt.toml  setlocale.c  test.c
src/: lib.rs  macros.rs  types.rs
src/arch/: mod.rs
src/arch/s390x/: mod.rs
src/arch/x86_64/: sys.rs
src/std/: mod.rs
src/std/ctype/: mod.rs
src/std/errno/: mod.rs
src/std/locale/: available.rs  mod.rs  posix.rs
src/std/stdlib/: constants.rs  mod.rs
src/std/string/: mod.rs
src/std/strings/: mod.rs
src/std/uchar/: mod.rs
src/std/wchar/: mbstate.rs  mod.rs
src/std/wctype/: mod.rs
src/support/: mod.rs
src/support/locale/: mod.rs
src/support/locale/collate/: mod.rs  posix.rs
src/support/locale/collate/uca/: README.md  ascii.rs  cea.rs  cea_utils.rs  collate.rs  consts.rs  first_weight.rs  mod.rs  normalize.rs  prefix.rs  sort_key.rs  tailor.rs  types.rs  weights.rs  xfrm.rs
src/support/locale/ctype/: ascii.rs  mod.rs  utf8.rs
src/support/locale/ctype/casemap/: ascii.rs  icu.rs  mod.rs
src/support/locale/ctype/converter/: ascii.rs  mod.rs  utf8.rs
src/support/locale/messages/: afar.rs  albanian.rs  american_english.rs  amish.rs  arabic.rs  aussie.rs  belarusian.rs  bokmal.rs  brazilian_portugese.rs  british_english.rs  cantonese.rs  cantonese_hans.rs  cantonese_hant.rs  catalan.rs  chinese_hans.rs  chinese_hant.rs  croatian.rs  czech.rs  danish.rs  dutch.rs  english.rs  estonian.rs  european_portugese.rs  finnish.rs  flemish.rs  french.rs  german.rs  greek.rs  hakka.rs  hebrew.rs  hokkien.rs  italian.rs  japanese.rs  korean.rs  limburgish.rs  maltese.rs  mod.rs  norwegian.rs  polish.rs  romansh.rs  (+11 more)
src/support/locale/monetary/: mod.rs  static_data.rs
src/support/locale/numeric/: mod.rs
src/support/locale/time/: mod.rs
src/support/string/: mod.rs
src/support/sync/: critical_section.rs  futex.rs  mod.rs
tests/: common.h  ctype_wctype.cc  locale.cc  string.cc  strings.cc  uchar.cc  wchar.cc
