[package]
name = "strogino"
version = "0.0.0"
edition = "2024"

[lib]
name = "c"
crate-type = ["staticlib", "cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bstr = { version = "1.12.0", default-features = false, features = ["alloc"] }
cbitset = "0.2"
critical-section = { version = "1.2.0", default-features = false, features = ["restore-state-bool"] }
dlmalloc = { version = "0.2", default-features = false, features = ["global"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
once_cell = { version = "1.21.0", default-features = false, features = ["critical-section"] }
syscalls = { version = "0.6", default-features = false }
icu_casemap = { path = "../icu4x/components/casemap", default-features = false, features = ["compiled_data"] }
icu_collator = { path = "../icu4x/components/collator", default-features = false, features = ["compiled_data"] }
icu_decimal = { path = "../icu4x/components/decimal", default-features = false, features = ["compiled_data", "alloc"] }
icu_locale = { path = "../icu4x/components/locale", default-features = false, features = ["compiled_data"] }
icu_properties = { path = "../icu4x/components/properties", default-features = false, features = ["compiled_data"] }
icu_experimental = { path = "../icu4x/components/experimental", default-features = false, features = ["compiled_data"] }
icu_provider = { path = "../icu4x/provider/core", default-features = false, features = ["logging"] }
tinystr = { path = "../icu4x/utils/tinystr" }
writeable = { path = "../icu4x/utils/writeable" }
