[package]
name = "strogino"
version = "0.0.0"
edition = "2024"

[lib]
name = "c"
crate-type = ["staticlib", "cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
cbitset = "0.2"
critical-section = { version = "1.2.0", default-features = false, features = ["restore-state-bool"] }
dlmalloc = { version = "0.2", default-features = false, features = ["global"] }
icu_casemap = { version = "2.0", default-features = false, features = ["compiled_data"] }
icu_collator = { version = "2.0", default-features = false, features = ["compiled_data"] }
icu_decimal = { version = "2.0", default-features = false, features = ["compiled_data", "alloc"] }
icu_locale = { version = "2.0", default-features = false, features = ["compiled_data"] }
icu_properties = { version = "2.0", default-features = false, features = ["compiled_data"] }
icu_experimental = { version = "0.3.0", default-features = false, features = ["compiled_data"] }
icu_provider = { version = "2.0", default-features = false, features = ["logging"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
once_cell = { version = "1.21.0", default-features = false, features = ["critical-section"] }
syscalls = { version = "0.7", default-features = false }
writeable = "0.6.1"
tinystr = "0.8.1"
